--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Hi there 
+title: Patrick Erichsen
 description: I'm Patrick, a UI Engineer passionate about leveraging emerging technologies to empower end-users.
 ---
 
